--- a/src/options.css
+++ b/src/options.css
@@ -221,7 +221,9 @@ body {
 }
 
 .section-icon {
-    font-size: 1.25rem;
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
 }
 
 .section-description {
