--- a/src/common/base.css
+++ b/src/common/base.css
@@ -34,6 +34,15 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow-x: hidden;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+@media screen and (max-width: 660px) {
+    .container {
+        padding: 0 12px;
+    }
 }
 
 /* ボタン共通 */
