style: タブ管理画面のレイアウト最適化と高さ計算の動的化
- .main 要素を Flexbox コンテナに変更し、高さを動的に計算させるように修正
- .tab-groups に設定されていたハードコードされた高さ (calc(100vh - 180px)) を削除
- Virtuoso コンポーネントが親の flex 高さを正しく継承するようスタイルを調整

--- a/src/tabs.css
+++ b/src/tabs.css
@@ -295,6 +295,9 @@
 .main {
   flex: 1;
   padding: 16px 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
 }
 
 /* タブグループ */
@@ -302,6 +305,8 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+  flex: 1;
+  min-height: 0;
 }
 
 .tab-group {
